--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Amelia Li</h1>
             <p class="subtitle">Computer Science & Informatics Student</p>
             <p class="location">University of Washington • Seattle, WA</p>
-            <p class="contact">amelia [at] uw [dot] edu</p>
+            <p class="contact">amelial9 [at] uw [dot] edu</p>
         </div>
 
         <div class="profile-image">
